Fix z-ordering of Facebook Like flyout.
The social/about links appear under the Popular Photos panel, but the
Like flyout appears above it.

See #49

--- a/viewer/static/styles/viewer.css
+++ b/viewer/static/styles/viewer.css
@@ -23,7 +23,7 @@ h2 a {
   color: #111;
 }
 .header {
-  position: fixed;
+  position: absolute;
   top: 0px;
   left: 0px;
   right: 0px;
